Issue https://github.com/wri/wriflagship/issues/799 fixing speaker alignment on long names.

--- a/themes/custom/ts_wrin/sass/components/_person.scss
+++ b/themes/custom/ts_wrin/sass/components/_person.scss
@@ -211,6 +211,10 @@
     min-width: 350px;
   }
 
+  .left-section {
+    flex-shrink: 0;
+  }
+
   img {
     border-radius: 50%;
     object-fit: cover;
@@ -219,7 +223,6 @@
 
   .person-teaser__inner-wrapper {
     display: flex;
-    align-items: center;
   }
 
   .right-section {
